Fix for a weird image overlap on safari.

--- a/css/wizardStyle.css
+++ b/css/wizardStyle.css
@@ -3,7 +3,7 @@
 
 /*form styles*/
 #msform {
-	width: 500px;
+	width: 600px;
 	margin: 50px auto;
 	text-align: center;
 	position: relative;
@@ -15,7 +15,6 @@
 	box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
 	padding: 20px 30px;
 	box-sizing: border-box;
-	width: 600px;
 	margin-left:-50px;
 	z-index: 0;
 	/*stacking fieldsets above each other*/
